--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>AWS</title><style>
+<html>
+	<head>
+	<meta http-equiv="Content-Type" content="AWS Certified Cloud Practitioner Notes"/><title>AWS Notes</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
